Shortened overflow width to fit iPhone correctly

--- a/css/snacktack.css
+++ b/css/snacktack.css
@@ -243,7 +243,7 @@ table p.descriptionShort {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	width: 260px;
+	width: 200px;
 }
 
 table p.nameNormal, 
